--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Project</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -61,13 +61,22 @@
             src="./assets/linkedin.png"
             alt="LinkedIn Profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/mateo-floresc/'"
+            title="LinkedIn"
+            onclick="window.open('https://www.linkedin.com/in/mateo-floresc/', '_blank')"
           />
           <img
             src="./assets/github.png"
             alt="GitHub Profile"
             class="icon"
-            onclick="location.href='https://github.com/Maflores1/'"
+            title="GitHub"
+            onclick="window.open('https://github.com/Maflores1/', '_blank')"
+          />
+          <img
+            src="./assets/blog.jpg"
+            alt="Blog"
+            class="icon"
+            title="Blog"
+            onclick="window.open('https://medium.com/@floresmateo226', '_blank')"
           />
         </div>
       </div>
@@ -84,8 +93,11 @@
                 alt="experience icon"
                 class="icon"
               />
-              <h3>Experience</h3>
-              <p>Cybersecurity Analyst Assistant</p>
+              <h3>Certifications</h3>
+              <p>
+                ISC2 Certified in Cybersecurity, Cybersecurity GRC (in progress)
+                Better Cyber Career
+              </p>
             </div>
             <div class="details-container">
               <img
@@ -115,6 +127,14 @@
             Notably, I conducted a comprehensive vulnerability assessment of
             Northwestern College’s network, employing NIST frameworks, OpenVAS,
             and Wireshark to identify and address security vulnerabilities.
+            <br />
+            <br />
+            As a bilingual (English/Spanish) student-athlete, I bring
+            discipline, teamwork, and effective communication to collaborative
+            cybersecurity environments. I am eager to join a forward-thinking
+            team, committed to developing secure, innovative solutions that
+            address today’s technological challenges while continuously
+            advancing within the industry.
           </div>
         </div>
       </div>
@@ -154,7 +174,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">IT Technician</h2>
             <div class="article-container">
               <article>
                 <img
@@ -163,10 +183,21 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>Jan. 2024 – Present</h3>
+                  <p>
+                    Enhanced user experience by troubleshooting and resolving
+                    multiple IT-related issues, providing timely and effective
+                    technical support that decreased resolution time by 30%.
+                  </p>
                 </div>
               </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">
+              Technology and Management Intern
+            </h2>
+            <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -174,10 +205,19 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <h3>May. – Aug. 2024</h3>
+                  <p>
+                    Optimized booking processes and enhanced client service
+                    experiences by integrating booking software with client
+                    databases, leading to a 20% reduction in processing time.
+                  </p>
                 </div>
               </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Athletic Communications</h2>
+            <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -185,19 +225,13 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>Feb. 2024 – Present</h3>
+                  <p>
+                    Enhanced Northwestern College's athletic engagement by
+                    managing digital content and producing livestream events,
+                    bolstering the department's online presence and
+                    communication.
+                  </p>
                 </div>
               </article>
             </div>
@@ -215,81 +249,223 @@
       <p class="section_text_p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
+        <!-- Changed class name for consistency -->
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project1.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">
+              Detecting Network Threats with Snort & Analyzing an FTP Attack
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://medium.com/@floresmateo226/detecting-network-threats-with-snort-analyzing-an-ftp-attack-my-third-hands-on-cybersecurity-5b0698f3aa38', '_blank')"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Read More
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project2.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">
+              Monitoring File Changes with Linux Auditd
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://medium.com/@floresmateo226/monitoring-file-changes-with-linux-auditd-my-second-codepath-cybersecurity-project-dd5294baf4ea', '_blank')"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Read More
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">
+              Log Analysis & Packet Inspection with Wireshark
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://medium.com/@floresmateo226/starting-my-codepath-cybersecurity-journey-hands-on-learning-with-real-world-security-challenges-8304fdfe1ac6', '_blank')"
               >
-                Github
+                Read More
               </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project4.jpg"
+                alt="Project 4"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Creating My First Vulnerability Report: Analyzing Security Risks
+              in My College’s Network
+            </h2>
+            <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://medium.com/@floresmateo226/creating-my-first-vulnerability-report-analyzing-security-risks-in-my-colleges-network-01fcb16d2b43', '_blank')"
               >
-                Live Demo
+                Read More
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project5.png"
+                alt="Project 5"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Setting Up Home Lab for Hands-On Cybersecurity Learning
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://medium.com/@floresmateo226/setting-up-our-home-lab-for-hands-on-cybersecurity-learning-8d9611a76b68', '_blank')"
+              >
+                Read More
               </button>
             </div>
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#virtual-experience'"
+      />
+    </section>
+
+    <section id="virtual-experience">
+      <p class="section_text_p1">Take a look at</p>
+
+      <!-- Virtual Internships Title -->
+      <h1 class="title">My Virtual Internships</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">
+              MasterCard: Cybersecurity virtual experience program on Forage
+            </h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <p>
+                    Completed a job simulation where I served as an analyst on
+                    Mastercard’s Security Awareness Team and identified and
+                    reported security threats such as phishing.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">
+              Datacom: Cybersecurity virtual experience program on Forage
+            </h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <p>
+                    Led a client protection initiative by investigating a
+                    cyberattack, identifying critical vulnerabilities, and
+                    authoring a report with key recommendations that
+                    strengthened the client's simulated cybersecurity defenses.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Leadership & Affiliations Title -->
+      <h1 class="title">Leadership & Affiliations</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">
+              Code Path & Color Stack Tech Fellow
+            </h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <p>
+                    Actively learning and growing as part of the CodePath and
+                    ColorStack communities, currently enhancing my skills
+                    through CodePath's Intermediate Cybersecurity course and
+                    connecting with peers to advance in the tech industry.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">
+              Men's Tennis Varsity Team Member
+            </h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <p>
+                    at Northwestern College and West Virginia State University.
+                    Tennis has been instrumental in shaping my discipline,
+                    resilience, and teamwork skills, driving both personal
+                    growth and professional achievement in pursuing my goals.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
@@ -307,7 +483,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:floresmateo226@gmail.com">Send Email</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -330,7 +506,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 Mateo Flores. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
