Fixed screen sizes problems and added final changes

--- a/index.html
+++ b/index.html
@@ -117,24 +117,22 @@
             </div>
           </div>
           <div class="text-container">
-            As a Software Engineering senior and cybersecurity enthusiast, I
-            have cultivated a robust foundation in IT support, software
-            development, and cybersecurity through hands-on projects and
-            real-world experience. My expertise encompasses network security,
-            vulnerability assessment, and penetration testing. By establishing a
-            home lab with tools like Kali Linux, Metasploitable, and Nmap, I
-            have honed my skills in threat detection and risk mitigation.
-            Notably, I conducted a comprehensive vulnerability assessment of
-            Northwestern College’s network, employing NIST frameworks, OpenVAS,
-            and Wireshark to identify and address security vulnerabilities.
+            Software Engineering senior and cybersecurity enthusiast with
+            hands-on experience in IT support, software development, and
+            cybersecurity. Skilled in network security, vulnerability
+            assessment, and penetration testing, I’ve built a home lab using
+            tools like Kali Linux and Nmap to strengthen my threat detection and
+            risk mitigation abilities. Notably, I conducted a vulnerability
+            assessment of Northwestern College’s network using NIST frameworks,
+            OpenVAS, and Wireshark to identify and address security
+            vulnerabilities.
+
             <br />
             <br />
             As a bilingual (English/Spanish) student-athlete, I bring
-            discipline, teamwork, and effective communication to collaborative
-            cybersecurity environments. I am eager to join a forward-thinking
-            team, committed to developing secure, innovative solutions that
-            address today’s technological challenges while continuously
-            advancing within the industry.
+            discipline, teamwork, and strong communication to collaborative
+            cybersecurity projects. I’m excited to contribute to innovative,
+            secure solutions while growing within the industry.
           </div>
         </div>
       </div>
