--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume.pdf')"
+            onclick="window.open('./assets/updated_resume.pdf')"
           >
             Resume/CV
           </button>
@@ -107,8 +107,7 @@
               />
               <h3>Education</h3>
               <p>
-                Northwestern College Iowa - Software Engineering (Expected) May
-                2025
+                Northwestern College Iowa - Software Engineering grad May 2025
               </p>
               <p>
                 West Virginia State University (transfer) - Computer Science
